[FIX] White Space

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a.text-green:focus {
 }
 
 section {
-  padding: 176px 0px 100px 0px;
+  padding: 120px 0px 60px 0px;
   display: block;
   /* box-shadow: 0px -10px 20px #00000010; */
   background-size: cover;
@@ -127,7 +127,7 @@ section {
 }
 
 #banner {
-  padding: 100px 0px;
+  padding: 60px 0px 60px 0px;
   text-align: center;
 }
 
@@ -142,6 +142,11 @@ section {
   #banner {
     padding: 160px 0px 100px 0px;
   }
+}
+
+#hello {
+  padding-top: 100px;
+  padding-bottom: 0px;
 }
 
 .navbar {
